[gd_scene load_steps=47 format=2]

[ext_resource path="res://src/scenes/editor/MenuBar/MenuBar.gd" type="Script" id=1]
[ext_resource path="res://src/utils/AnimatedPopupAnim/AnimatedPopupAnim.tscn" type="PackedScene" id=2]



[sub_resource type="InputEventKey" id=1]
control = true
command = true
scancode = 78

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
control = true
command = true
scancode = 79

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventKey" id=5]
control = true
command = true
scancode = 83

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventKey" id=7]
shift = true
control = true
command = true
scancode = 83

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventKey" id=9]
control = true
command = true
scancode = 81

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="InputEventKey" id=11]
control = true
command = true
scancode = 90

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="InputEventKey" id=13]
shift = true
control = true
command = true
scancode = 90

[sub_resource type="ShortCut" id=14]
shortcut = SubResource( 13 )

[sub_resource type="InputEventKey" id=15]
control = true
command = true
scancode = 88

[sub_resource type="ShortCut" id=16]
shortcut = SubResource( 15 )

[sub_resource type="InputEventKey" id=17]
control = true
command = true
scancode = 67

[sub_resource type="ShortCut" id=18]
shortcut = SubResource( 17 )

[sub_resource type="InputEventKey" id=19]
control = true
command = true
scancode = 80

[sub_resource type="ShortCut" id=20]
shortcut = SubResource( 19 )

[sub_resource type="InputEventKey" id=21]
control = true
command = true
scancode = 68

[sub_resource type="ShortCut" id=22]
shortcut = SubResource( 21 )

[sub_resource type="InputEventKey" id=23]
scancode = 16777224

[sub_resource type="ShortCut" id=24]
shortcut = SubResource( 23 )

[sub_resource type="InputEventKey" id=25]
scancode = 61

[sub_resource type="ShortCut" id=26]
shortcut = SubResource( 25 )

[sub_resource type="InputEventKey" id=27]
scancode = 45

[sub_resource type="ShortCut" id=28]
shortcut = SubResource( 27 )

[sub_resource type="InputEventKey" id=29]
scancode = 48

[sub_resource type="ShortCut" id=30]
shortcut = SubResource( 29 )

[sub_resource type="InputEventKey" id=31]
scancode = 71

[sub_resource type="ShortCut" id=32]
shortcut = SubResource( 31 )

[sub_resource type="InputEventKey" id=33]
scancode = 49

[sub_resource type="ShortCut" id=34]
shortcut = SubResource( 33 )

[sub_resource type="InputEventKey" id=35]
scancode = 50

[sub_resource type="ShortCut" id=36]
shortcut = SubResource( 35 )

[sub_resource type="InputEventKey" id=37]
scancode = 51

[sub_resource type="ShortCut" id=38]
shortcut = SubResource( 37 )

[sub_resource type="InputEventKey" id=39]
scancode = 52

[sub_resource type="ShortCut" id=40]
shortcut = SubResource( 39 )

[sub_resource type="InputEventKey" id=41]
scancode = 53

[sub_resource type="ShortCut" id=42]
shortcut = SubResource( 41 )

[sub_resource type="InputEventKey" id=43]
scancode = 54

[sub_resource type="ShortCut" id=44]
shortcut = SubResource( 43 )

[node name="MenuBarPanel" type="Panel"]
anchor_right = 1.0
margin_bottom = 32.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
shortcut_file_new = SubResource( 2 )
shortcut_file_open = SubResource( 4 )
shortcut_file_save = SubResource( 6 )
shortcut_file_save_as = SubResource( 8 )
shortcut_file_exit = SubResource( 10 )
shortcut_edit_undo = SubResource( 12 )
shortcut_edit_redo = SubResource( 14 )
shortcut_edit_cut = SubResource( 16 )
shortcut_edit_copy = SubResource( 18 )
shortcut_edit_paste = SubResource( 20 )
shortcut_edit_duplicate = SubResource( 22 )
shortcut_edit_delete = SubResource( 24 )
shortcut_view_zoom_in = SubResource( 26 )
shortcut_view_zoom_out = SubResource( 28 )
shortcut_view_zoom_reset = SubResource( 30 )
shortcut_view_tile_grid = SubResource( 32 )
shortcut_view_tiles = SubResource( 34 )
shortcut_view_backgrounds = SubResource( 36 )
shortcut_view_objects = SubResource( 38 )
shortcut_view_active_screens = SubResource( 40 )
shortcut_view_ladders = SubResource( 42 )
shortcut_view_spikes = SubResource( 44 )

[node name="MenuBarHBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileMenu" type="MenuButton" parent="MenuBarHBox"]
margin_right = 35.0
margin_bottom = 32.0
button_mask = 7
text = "File"
switch_on_hover = true

[node name="AnimatedPopupAnim" parent="MenuBarHBox/FileMenu" instance=ExtResource( 2 )]

[node name="EditMenu" type="MenuButton" parent="MenuBarHBox"]
margin_left = 43.0
margin_right = 79.0
margin_bottom = 32.0
size_flags_horizontal = 0
button_mask = 7
text = "Edit"
switch_on_hover = true

[node name="AnimatedPopupAnim" parent="MenuBarHBox/EditMenu" instance=ExtResource( 2 )]

[node name="ViewMenu" type="MenuButton" parent="MenuBarHBox"]
margin_left = 87.0
margin_right = 129.0
margin_bottom = 32.0
size_flags_horizontal = 0
button_mask = 7
text = "View"
switch_on_hover = true

[node name="AnimatedPopupAnim" parent="MenuBarHBox/ViewMenu" instance=ExtResource( 2 )]

[node name="HelpMenu" type="MenuButton" parent="MenuBarHBox"]
margin_left = 137.0
margin_right = 179.0
margin_bottom = 32.0
size_flags_horizontal = 0
button_mask = 7
text = "Help"
switch_on_hover = true

[node name="AnimatedPopupAnim" parent="MenuBarHBox/HelpMenu" instance=ExtResource( 2 )]
